# quickDBLP

./: .gitignore  LICENSE  Readme.md  ponder_dblp.pl  pyproject.toml  query_dblp.ipynb  query_dblp.py  refresh_rdf_cache.pl  refresh_rdf_cache.py  requirements.txt  test.ipynb
.github/workflows/: package-binaries.yml
ponder_dblp/: CMakeLists.txt  CMakePresets.json  InMemDB.hpp  ThreadPool.hpp  ThreadSafeIDGenerator.hpp  Timer.hpp  ponder_dblp.cpp  vcpkg.json
